app/assets/stylesheets/components/_navbar_user.scss
// ------------- Classes -------------
.dropdown-toggle::after {
  display: inline-block;
  margin-left: 2em;
  vertical-align: 0.255em;
  content: "";
  border-top: 0.3em solid;
  border-right: 0.3em solid transparent;
  border-bottom: 0;
  border-left: 0.3em solid transparent;
}

.for-user-js {
  color: $text-light !important;

  &:hover {
    color: white !important;
  }
}

.user-nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  padding: 8px;
}

.user-nav-container {
  padding-right: 70px;
  padding-top: 15px;
  padding-bottom: 15px;
  color: white;
  
  &:hover {
  background: $green-hover;
  color: white !important;
  border-radius: 8px;  
  }
  
  &:hover>* {
  background: $green-hover;
  color: white !important;
  }
}

.navbar-mobile-flex {
  display: flex;
  align-items: center;
  @media (max-width: 428px) {
    flex-direction: column-reverse;
    justify-content: center;
  }
}

.navbar-nav.mr-auto.navbar-mobile-flex > *{
  margin: 1em 0;
}

.user-tab-highlighter {
  background: $green-hover;
  border-radius: 8px;
  color: white;
  padding: 8px;
}
// ------------- IDs -------------

#navbar-first-name {
  font-size: 18px;
}

